# Vulnarax-CORE

./: AQUA_SECURITY_ACHIEVEMENT.md  COMPETITIVE_ANALYSIS.md  ENTERPRISE_IMPLEMENTATION_SUMMARY.md  PRODUCTION_SUMMARY.md  README.md  __main__.py  enterprise_analytics.db  kev_cache.json  main.py  malicious_packages.db  pyproject.toml  quick_sast_test.py  report.json  requirements.txt  run.sh  sample_vulnarax_cyclonedx.json  sample_vulnarax_sbom.json  sbom.json  test_cache_api.sh  test_enterprise_reporting.py  test_infrastructure_scanner.py  test_ml_analyzer.py  test_notifications.py  test_rasp_engine.py  test_risk_assessment.py  test_sast_engine.py  test_sbom_enhanced.py  test_supply_chain_security.py  threat_intelligence.db  vulnerabilities.db  vulnerability_feeds.db  vulnerability_risk_cache.db  webhooks.db
test-go-project/: go.mod  go.sum
test-java-project/: build.gradle  pom.xml
vulnaraX/: cache.py  cli.py  enterprise_reporting.py  infrastructure_scanner.py  metrics.py  ml_analyzer.py  rasp_engine.py  risk_assessment.py  sast_engine.py  sbom_generator.py  scanner.py  supply_chain_security.py  utils.py  webhook_system.py
vulnaraX/fingerprint/: elf_scanner.py  hash_utils.py  yara_rules.py
vulnaraX/parsers/: apk_parser.py  dpkg_parser.py  go_parser.py  java_parser.py  npm_parser.py  pip_parser.py
vulnaraX/sources/: cache.py  nvd_client.py  osv_client.py
vulnarax_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
