[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnarax-core"
version = "0.1.0"
description = "Open-source CLI vulnerability scanner"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click",
    "requests",
    "rich"
    "cyclonedx-python-lib>=4.0.0"
]

[project.scripts]
vulnaraX = "vulnaraX.cli:main"